fix(OutboundConnector): add variables to fail JobCommand
Closes #5979